2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* eris.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-11-14  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp: fix initialisation of a dummy position vector.
	  Thanks to erik for the catch.

2004-11-1  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: change signature of 'valueOfAttr' to return by
	  reference. This entailed pushing all attributes into the primary
	  storage map (including native ones), which means hasAttr and
	  observers will now work for native attrs as normal.
	  
	* Eris/Avatar.cpp: modify take() to send an empty position in the
	  move op, otherwise cyphesis rejects it.
	
2004-10-30  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: add virtual hooks for ChildAdded / Removed, as
	  requested by Erik. The default implementation emits the
	  existing signals as you'd expect.
	
	* Eris/Entity.cpp: change the signatures of almost all the signals on
	  Entity to NOT include 'this' as an argument. If you want this
	  behaviour, please use the SigC::bind<> templates at connect time.
	  Additional, LocationChanged now only includes the previous location:
	  the new location is available directly from the Entity.

	* Eris/Avatar.cpp: update Avatar for the new signal signature
	
2004-10-30  James Turner  <james@worldforge.org>

	* Eris/TypeObject.cpp: actually emit the BoundType signal from the
	  TypeService, as well as the Bound signal on TypeObject. Ooops.

2004-10-30  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: initialise orientation to the identity quaternion,
	  instead of an invalid one. Should fix strange orientations Erik is
	  seeing in Ember.

2004-10-27  James Turner  <james@worldforge.org>

	* tests/metaQuery.cpp: detect failures of the server object, for example
	  if the wrong hostname is provided. This should stop the tool blocking
	  when the metaserver IP changes, for example.
	  